--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --host",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.2"
+    "@astrojs/tailwind": "^5.1.2",
+    "@midudev/tailwind-animations": "^0.1.0",
+    "astro": "^4.16.2",
+    "astro-cloudinary": "^1.1.0",
+    "cloudinary": "^2.5.1",
+    "mongoose": "^8.7.2",
+    "tailwindcss": "^3.4.13"
   }
 }
