--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/vercel": "^7.8.2",
     "@midudev/tailwind-animations": "^0.1.0",
     "astro": "^4.16.2",
     "astro-cloudinary": "^1.1.0",
